# database-safe-layer

./: .gitignore  LICENSE  README.md  pyproject.toml
db_safe_layer/: .env.example  __init__.py  app.py  requirements.txt  rollback.py  safe_db_cli.py  safe_db_rollback_cli.py
db_safe_layer/audit/: log_manager.py  replay.py
db_safe_layer/db/: config.py  database.py  rollback.py  snapshot.py
db_safe_layer/execution/: executor.py
db_safe_layer/utils/: risk_policy.py  snapshot_manager.py  sqlglot_helper.py  sqlglot_utils.py
poc/: .env.example  README.md  app.py
poc/audit/: replay.py
poc/db/: config.py  database.py  snapshot.py
poc/execution/: executor.py  sql_generator.py
poc/graph/: dag_builder.py
poc/intent/: parser.py  schema.py
poc/utils/: risk_policy.py  snapshot_manager.py  sqlglot_utils.py
