[project]
name = "db_safe-layer"
version = "0.1.0"
description = "A secure SQL execution engine with risk analysis and reversible snapshot support."
readme = "README.md"
license = {file = "LICENSE"}
authors = [
  {name = "interact-space", email = "contact@interact-space.com"},
]

requires-python = ">=3.8"

dependencies = [
    "sqlalchemy>=2.0",
    "sqlglot>=18.0",
    "click>=8.0",
    "pydantic>=2.8.2",
    "python-dotenv>=1.0.1",
]

[project.urls]
Homepage = "https://github.com/interact-space/database-safe-layer"

# ▼ Set import db_safe_layer to work properly
[tool.setuptools.packages.find]
include = ["db_safe_layer*"]

# ▼ Generate CLI program safe-layer after installation
[project.scripts]
safe-layer = "db_safe_layer.safe_db_cli:main"
safe-db-rollback = "db_safe_layer.safe_db_rollback_cli:main"
